forgot build step here

--- a/code-complete-game/package.json
+++ b/code-complete-game/package.json
@@ -4,6 +4,7 @@
   "description": "a digital pet game",
   "main": "src/index.html",
   "scripts": {
+    "build": "parcel build src/index.html",
     "dev": "parcel src/index.html",
     "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
     "format:check": "prettier --ignore-path ./.gitignore --check \"./**/*.{html,json,js,ts,css}\"",
