--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,7 @@ jobs:
           npm run build
       - name: Deploy site to gh-pages branch
         uses: crazy-max/ghaction-github-pages@v1.4.0
+        env:
+          GITHUB_PAT: ${{ secrets.PAT }}
         with:
           build_dir: code-complete-game/dist
