--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         working-directory: code-complete-game
         run: |
           npm install
-          npm run build -- --public-url ./project-files-for-fox-game/
+          npm run build -- --public-url /project-files-for-fox-game/
       - name: Deploy site to gh-pages branch
         uses: crazy-max/ghaction-github-pages@v1.4.0
         env:
